Fix CSS for tables
tables were really hard to read using the tactile theme.
Borders are now drawn, header elements are in bold.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,3 +9,8 @@ a:hover { color: #303030; }
 h1 a {
     color: #303030;
 }
+
+table { width: 100%; border: 1px solid #303030; }
+td { font-weight: 300; text-align: center; border: 1px solid #303030; }
+tr { padding: 0; margin: 0; font: inherit; font-weight: bold; font-size: 100%; vertical-align: baseline; border: 1px solid #303030; }
+th { padding: 0; margin: 0; font: inherit; font-size: 100%; vertical-align: baseline; border: 1px solid #303030; }
